# cmake-gtest-example

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Example.cpp  Example.hpp
test/: CMakeLists.txt  ExampleTests.cpp
